Remove the shortcuts from the mdi window's system menu's actions

Just changing the scope isn't enough: people also want to be
able to configure the the close window action. Fortunately,
that turns out to be quite possible.

CCBUG:398729
BUG:375524
BUG:352205